# zfs

./: .gitignore  Dockerfile  META  Makefile.am  RELEASES.md  configure.ac
.github/workflows/: checkstyle.yaml  ci.yml  docker_image.yml  zfs-tests-functional.yml  zfs-tests-sanity.yml  zloop.yml
cmd/: Makefile.am  zfs_getnfs4facl.in  zfs_setnfs4facl.in  ztest.c
cmd/zdb/: zdb.c  zdb_il.c
cmd/zfs/: zfs_iter.c  zfs_main.c
cmd/zfsd/: case_file.cc
cmd/zhack/: zhack.c
cmd/zpool/: zpool_main.c  zpool_vdev.c
cmd/ztest/: ztest.c
config/: Rules.am  deb.am  kernel-fpu.m4  kernel-inode-permission.m4  kernel.m4  user.m4  zfs-build.m4
contrib/bash_completion.d/: Makefile.am
contrib/debian/: changelog  clean  control  control.modules.in  control.udeb.in  openzfs-libnvpair3.lintian-overrides  openzfs-libuutil3.lintian-overrides  openzfs-libzfs-dev.lintian-overrides  openzfs-libzfs4.lintian-overrides  openzfs-libzfsbootenv1.lintian-overrides  openzfs-libzpool5.lintian-overrides  openzfs-python3-libzfsacl.install  openzfs-python3-pyzfs.install  openzfs-zfs-dkms.lintian-overrides  openzfs-zfs-modules-_KVERS_-di.install.in  openzfs-zfsutils.install  openzfs-zfsutils.lintian-overrides  rules  rules.in
etc/: Makefile.am
etc/rc.d/: zfs  (+1 more)
include/: libzfs.h  libzutil.h  zfeature_common.h
lib/: Makefile.am
lib/libzfsacl/: Makefile.am  libpyzfsacl.c  libsunacl.c  libzfsacl.h  libzfsacl_impl_freebsd.c  libzfsacl_impl_linux.c  setup.py.in  sunacl.h
lib/libzfsacl/zfsacltests/: test_nfsv4acl.py
module/: Kbuild.in  Makefile.bsd  Makefile.in
scripts/: debian-packaging.sh
(+172 files in other folders)
